# SpacecraftGNC

./: README.md  pyproject.toml  pytest.ini
scripts/: plot_orbital_diagnostics.py
src/ascii_globe/: __init__.py  main.py  map.py  model.py  styles.css  view.py
src/gnc/attitude/: orientation.py  rigid_body.py
src/gnc/dynamics/: attitude.py  orbital.py
src/gnc/integrators/: ode113_like.py
src/gnc/simulation/: main.py  sim.py
src/gnc/visualisation/: plot_angVel.py  plot_angularMomentum.py  plot_anomalyVStime.py  plot_eulAng.py  plot_groundTrack.py  plot_orbital.py  plot_polhode.py  plot_posVelError.py  plot_specific_energy.py
tests/: label_test.py  test_model.py  test_orbital.py  test_rigid_body.py  test_view_rendering.py
